--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-705.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇳🇱 荷兰-1.31MB/s(Youtube:不良林), server: 213.183.59.190, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-372.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林), server: 213.183.53.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 保加利亚-271.2KB/s(Youtube:不良林), server: 213.183.63.217, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
   - {name: 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 保加利亚-271.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 保加利亚-271.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 保加利亚-271.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 保加利亚-271.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 保加利亚-271.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 保加利亚-271.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 保加利亚-271.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
