--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林), server: 213.183.53.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 保加利亚-271.2KB/s(Youtube:不良林), server: 213.183.63.217, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 波兰-441.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇳🇱 荷兰-509.7KB/s(Youtube:不良林), server: 213.183.59.229, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇳🇱 荷兰-493.3KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-1.78MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-2.73MB/s(Youtube:不良林), server: 213.183.59.190, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 213.183.53.200, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林), server: 213.183.53.200, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
   - {name: 🇳🇱 荷兰-1.27MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 保加利亚-271.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
+      - 波兰-441.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 保加利亚-271.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
+      - 波兰-441.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 保加利亚-271.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
+      - 波兰-441.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 保加利亚-271.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
+      - 波兰-441.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 保加利亚-271.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
+      - 波兰-441.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 保加利亚-271.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
+      - 波兰-441.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-894.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 保加利亚-271.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
+      - 波兰-441.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
