--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-441.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇳🇱 荷兰-509.7KB/s(Youtube:不良林), server: 213.183.59.229, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇳🇱 荷兰-493.3KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇳🇱 荷兰-1.78MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇳🇱 荷兰-2.73MB/s(Youtube:不良林), server: 213.183.59.190, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 213.183.53.200, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇳🇱 荷兰-1.65MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-244.4KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林), server: 213.183.53.200, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
   - {name: 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-441.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-441.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-441.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-441.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-441.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-441.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-441.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-509.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-493.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-261.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-260.7KB/s(Youtube:不良林)
