--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 213.183.53.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇳🇱 荷兰-244.4KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-903.8KB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇳🇱 荷兰-469.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 保加利亚-424.7KB/s(Youtube:不良林), server: 213.183.63.218, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 保加利亚-354.8KB/s(Youtube:不良林), server: 213.183.63.218, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇳🇱 荷兰-244.4KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 塞尔维亚-2.87MB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-469.0KB/s(Youtube:不良林)
-      - 保加利亚-424.7KB/s(Youtube:不良林)
-      - 保加利亚-354.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
       - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-469.0KB/s(Youtube:不良林)
-      - 保加利亚-424.7KB/s(Youtube:不良林)
-      - 保加利亚-354.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
       - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-469.0KB/s(Youtube:不良林)
-      - 保加利亚-424.7KB/s(Youtube:不良林)
-      - 保加利亚-354.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
       - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-469.0KB/s(Youtube:不良林)
-      - 保加利亚-424.7KB/s(Youtube:不良林)
-      - 保加利亚-354.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
       - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-469.0KB/s(Youtube:不良林)
-      - 保加利亚-424.7KB/s(Youtube:不良林)
-      - 保加利亚-354.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
       - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-469.0KB/s(Youtube:不良林)
-      - 保加利亚-424.7KB/s(Youtube:不良林)
-      - 保加利亚-354.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
       - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-903.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-469.0KB/s(Youtube:不良林)
-      - 保加利亚-424.7KB/s(Youtube:不良林)
-      - 保加利亚-354.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-244.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
       - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
